# Titanic

./: .env.example  .gitignore  DEVELOPER_README.md  README.md  SENTRY_PROXY_IMPLEMENTATION.md  docker-compose.dev.yml  docker-compose.test.yml
.github/: dependabot.yml
.github/workflows/: dependabot.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml  frontend-ci.yml  functions-build.yml  functions-deploy.yml  publish-backend.yml  publish-titanic.yml  publish-trimmer.yml  publish-umbrel-titanic.yml  publish-umbrel.yml  release-titanic.yml  release-trimmer.yml  test.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  app.py  docker-compose.build.yml  docker-compose.run.yml  docker-compose.yml  fileutils.py  hypercorn.toml  nginx.conf  pytest.ini  redis.conf  requirements.txt  setup-dev.sh  start.sh  worker.py
backend/caddy/: Caddyfile  Dockerfile
backend/jobs/: job.py  long_job.py  shareable.py
backend/tests/: test_fileutils.py  test_shareable.py
frontend/: .env.example  .firebaserc  README.md  bun.lockb  firebase.json  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/functions/: .env.example  eslint.config.js  package-lock.json  package.json
frontend/functions/src/: index.ts
frontend/public/: init.js
frontend/src/: App.tsx  index.css  main.tsx  sentry.ts  sentryTransport.ts
frontend/src/components/: BackendStatus.tsx  DiskSpaceIndicator.tsx  FfmpegVersion.tsx  FileUploader.tsx  Tooltip.tsx
frontend/src/components/animate-ui/base/: switch.tsx
frontend/src/components/animate-ui/components/radix/: dropdown-menu.tsx
frontend/src/components/animate-ui/primitives/effects/: highlight.tsx
frontend/src/components/animate-ui/primitives/radix/: dropdown-menu.tsx
frontend/src/utils/: api.ts  shareable.ts  toast.ts
tests/e2e/: test_e2e.sh
titanic/: .dockerignore  .env.example  .env.prod  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  docker-compose.prod.yml  docker-compose.yml  env.example  exports.sh  umbrel-app.yml
titanic/src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  settings.html  settings.rs  upload.rs
titanic/tests/: integration.rs
trimmer/: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml  umbrel-app.yml
trimmer/src/: error.rs  lib.rs  main.rs  trim.rs
trimmer/static/: app.js  index.html  style.css
umbrel/: Cargo.toml  README.md  deploy.sh  dev-setup.sh  docker-compose.yml  env.example
umbrel-titanic/: Cargo.toml  Dockerfile  Dockerfile.dev  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  umbrel-app.yml
umbrel-titanic/src/: config.rs  error.rs  upload.rs
umbrel/src/: auth.rs  config.rs  main.rs
