[package]
name = "titanic"
version = "1.0.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["json", "multipart"] }
libc = "0.2"
tokio = { version = "1.50", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.7", features = ["cors", "limit", "trace"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
anyhow = "1.0.102"
thiserror = "2.0.18"
uuid = { version = "1.22", features = ["v4"] }
chrono = { version = "0.4.44", features = ["serde"] }
futures = "0.3"
reqwest = "0.13.2"
jsonwebtoken = { version = "10.3.0",  features = ["aws_lc_rs"] }
base64 = "0.22.1"
sha2 = "0.11"
hmac = "0.12"
hex = "0.4"
path-slash = "0.2"
dotenvy = "0.15.7"
sanitize-filename = "0.6.0"
path-clean = "1.0.1"
tokio-util = { version = "0.7.18", features = ["io"] }
openssl = { version = "0.10", features = ["vendored"] }
sentry = { version = "0.47.0", features = ["tracing"] }

[dev-dependencies]
hyper = "1"
http-body-util = "0.1"
mime = "0.3"
tempfile = "3.27"