[package]
name = "trimmer"
version = "1.0.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["json"] }
tokio = { version = "1.50", features = ["full"] }
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.7", features = ["cors", "trace", "fs", "set-header"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
anyhow = "1.0.102"
thiserror = "2.0.18"
chrono = { version = "0.4.44", features = ["serde"] }
path-clean = "1.0.1"
dotenvy = "0.15.7"
futures = "0.3.32"

[dev-dependencies]
tempfile = "3.27"
